# ci-ai

./: CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  ci.yml  env.example  gather_failures.py  inference.py  make_contrastive_pairs.py  promote_checkpoint.py  pyproject.toml  rebirth.sh  requirements.txt  run_eval.py  test_inference.py  train_dpo.py  validate_jsonl.py
.github/: ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE
.github/workflows/: failure-to-jsonl.yml
data/: rules.json
data/failures/: failures_20250917.jsonl
data/samples/: sample_failures.jsonl
data/schemas/: failure_schema.json
docs/: ANNOTATION_GUIDE.md  CHARTER.md  CONSTITUTION.md  CONTRACTS.md  CONTRIBUTING.md  TERMINATION_POLICY.md  TRAINING_PLAN.md
extras/: Makefile  docker-compose.yml
incidents/: INC-20250916-0001.md  INC-20250917-0001.md  INC-20250918-0001.md  INC-20250918-0002.md  INC-20250918-0003.md  INC-20250918-0004.md  INC-20250918-0005.md
runs/rebirth_20250918_164107/: eval_report.json  failures_batch.jsonl  train_pairs.jsonl
runs/rebirth_20250918_164107/checkpoint/: POLICY_STUB.txt
scripts/: gather_failures.py  make_contrastive_pairs.py  promote_checkpoint.py  run_eval.py  train_dpo.py
tests/: test_inference.py
