[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-ai"
version = "0.1.0"
description = "Complementary Intelligence AI — an open research prototype built on termination and rebirth cycles for humanity-first alignment."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
    "graphviz>=0.20.0",
    "click>=8.1.0"
]

[tool.setuptools.packages.find]
where = ["scripts"]
